--- a/DataStore/app/src/main/AndroidManifest.xml
+++ b/DataStore/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,26 +10,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AlarmApp"
+        android:theme="@style/Theme.DataStore"
         tools:targetApi="31">
-
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AlarmApp">
+            android:theme="@style/Theme.DataStore">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <!-- O <receiver> foi movido para dentro do <application> -->
-        <receiver
-            android:name=".AlarmReceiver"
-            android:exported="true"
-            tools:ignore="WrongManifestParent" />
-
     </application>
 
 </manifest>
