--- a/AlarmApp/app/src/main/AndroidManifest.xml
+++ b/AlarmApp/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
 
     <application
         android:allowBackup="true"
@@ -31,6 +35,7 @@
             android:name=".AlarmReceiver"
             android:exported="true"
             tools:ignore="WrongManifestParent" />
+        <service android:name=".AlarmService" android:exported="false" />
 
     </application>
 
